# ARKane-Wallet

./: LICENSE  Readme.md
backend/server/: Cargo.toml  ark.config.toml
backend/server/src/: common.rs  main.rs  server.rs  transactions.rs  types.rs  wallet.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx
frontend/app/wallet/: page.tsx
frontend/components/: create-wallet-form.tsx  landing-page.tsx  receive-modal.tsx  restore-wallet-form.tsx  send-modal.tsx  wallet-page.tsx
